# paper-community

./: .gitignore  README.md  README_topic_modeling.md  developer_manual_zh.md  environment-fa2l.yml  environment.yml  pyproject.toml  requirements-api.txt  requirements.txt  user_manual_zh.md  文献支架_topic_labeling_与科学计量对照.md
backend/: requirements.txt
data/: AuthorPaperInfo_py.RData  TopicResults_py.RData  check_report.txt  embedding_check.txt  papers.csv  stopwords.txt
docs/: README.md  algorithm-pipeline-spec.md  architecture-boundaries.md  cleanup-and-validation.md  evaluation-metrics-spec.md  experiment-comparison-pipeline.md  offline-outputs-catalog.md  out-archive-policy.md  requirements-breakdown.md  web-version-2-plan.md
pcore/: __init__.py  community.py  graph.py  layout.py  metrics.py  naming.py
scripts/: analyze_results.py  build_graph.py  clean_outputs.py  daily_workflow.sh  demo_all.sh  export_layout.py  gnn_train.py  load_db.py  offline_comparison_master.sh  plot_retrieval_sixway_rankings.py  plot_umap_membership.py  run_community.py  run_extended_experiments.sh
src/: README.md  align_topics_multires.py  align_topics_multires_segmented.py  checklist.py  community.py  core.py  demo_api_app.py  demo_graph.py  demo_search.py  diagnose_topic_collapse.py  diagram2d.py  embedding.py  export_web_payload.py  frames_to_mp4.py  getdata.py  hierarchy_index.py  hierarchy_root_trees.py  hierarchy_viz.py  model.py  network.py  project_paths.py  retrieval.py  time_window.py  topic_labeling.py  topic_modeling.py  topic_modeling_multi.py  (+1 more)
web/: app.js  index.html  (+5 more)
(+88 files in other folders)
