[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "paper-community"
version = "0.1.0"
description = "Paper similarity graph + community pipeline"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[tool.hatch.build.targets.wheel]
packages = ["pcore"]